Fixed spacing and z-index issues. Fixed character count issue when posting

--- a/public/styles/tweet.css
+++ b/public/styles/tweet.css
@@ -2,7 +2,7 @@
   border-radius: 5px;
   border: 2px solid #E9E9E9;
   background-color: white;
-  margin: 0px 2em;
+  margin: 10px 2em;
 }
 
 .tweet:hover {
